--- a/translations/en-HR.json
+++ b/translations/en-HR.json
@@ -1,5 +1,5 @@
 {
-  "Activity": "Program Clasification",
-  "Administrative Classification": "Organizational Clasification",
+  "Activity": "Program Classification",
+  "Administrative Classification": "Organizational Classification",
   "Fin Source": "Funds"
 }
