--- a/translations/el.json
+++ b/translations/el.json
@@ -64,7 +64,7 @@
   "Search for item...": "Αναζήτησε αντικείμενο...",
   "Search your packages": "Αναζήτησε τα πακέτα δεδομένων σου",
   "Series": "Σειρές",
-  "Share": "Μοιράσου το",
+  "Share": "Μερίδιο",
   "Share this visualization": "Μοιράσου αυτό το διάγραμμα",
   "Share visualization": "Μοιράσου το διάγραμμα",
   "Supplier": "Πάροχος",
