--- a/translations/en.json
+++ b/translations/en.json
@@ -30,6 +30,7 @@
   "Data Resources": "Data Resources",
   "Date": "Date",
   "Direction": "Direction",
+  "Donut Chart": "Donut Chart",
   "Download Data Package": "Download Data Package",
   "Download as CSV": "Download as CSV",
   "Economic Classification": "Economic Classification",
