Update translations to new hierarchy names

--- a/translations/de.json
+++ b/translations/de.json
@@ -1,17 +1,17 @@
 {
   "... there are more items": "... weitere Daten vorhanden",
-  "Activity": "T\u00e4tigkeit",
-  "Add Visualization": "Diagramm hinzuf\u00fcgen",
+  "Activity": "Tätigkeit",
+  "Add Visualization": "Diagramm hinzufügen",
   "Administrative Classification": "Administrative Klassifizierung",
   "Administrator": "Administrator",
   "Analyse this data set in the Data Mine": "Analysiere diese Daten in der Data Mine",
-  "Available visualizations": "Verf\u00fcgbare Diagramme",
-  "Bar Chart": "S\u00e4ulendiagramm",
+  "Available visualizations": "Verfügbare Diagramme",
+  "Bar Chart": "Säulendiagramm",
   "Bubble Tree": "Bubble Tree",
   "Budget Line Id": "Budget Zeilennummer",
-  "Budgetary Transfers": "Haushalts\u00fcberweisungen",
+  "Budgetary Transfers": "Haushaltsüberweisungen",
   "CSV export encoding": "CSV export encoding",
-  "Clear": "L\u00f6schen",
+  "Clear": "Löschen",
   "Columns": "Spalten",
   "Create visualisation and select a view of your choice": "Erstelle ein Diagramm und selektiere eine Ansicht",
   "Data Resources": "Datenquellen",
@@ -34,13 +34,13 @@
   "Location": "Ort",
   "Log-in to analyse this data set in the Data Mine": "Einloggen, um diese Daten in der Data Mine zu analysieren",
   "Map": "Karte",
-  "Measures": "Ma\u00dfnahmen",
-  "Open Spending Viewer": "\u00f6ffne Spending Viewer",
+  "Measures": "Maßnahmen",
+  "Open Spending Viewer": "öffne Spending Viewer",
   "Phase": "Phase",
   "Pie Chart": "Tortendiagramm",
   "Pivot Table": "Pivot Tabelle",
   "Procurer": "Vermittler",
-  "Recipient": "Empf\u00e4nger",
+  "Recipient": "Empfänger",
   "Remove all visualizations": "Entferne alle Diagramme",
   "Remove this visualization": "Diese Visualisierung entfernen",
   "Rows": "Zeilen",
@@ -55,5 +55,22 @@
   "Unknown": "Unbekannt",
   "View Raw Source Data": "Zeige Rohdaten",
   "X-Axis": "X-Achse",
-  "existing visualizations to enable full range of visualization types.": "existierende Diagramme, um wieder alle Diagramm Typen zur Verf\u00fcgung zu haben."
+  "activity": "Tätigkeit",
+  "administrative-classification": "Administrative Klassifizierung",
+  "administrator": "Administrator",
+  "budget-line-id": "Budget Zeilennummer",
+  "budgetary-transfers": "Haushaltsüberweisungen",
+  "date": "Datum",
+  "direction": "Richtung",
+  "economic-classification": "Wirtschaftliche Klassifizierung",
+  "existing visualizations to enable full range of visualization types.": "existierende Diagramme, um wieder alle Diagramm Typen zur Verfügung zu haben.",
+  "expenditure-type": "Ausgabentyp",
+  "fin-source": "Fin Source",
+  "functional-classification": "Funktionelle Klassifizierung",
+  "geo-source": "Geo Quelle",
+  "phase": "Phase",
+  "procurer": "Vermittler",
+  "recipient": "Empfänger",
+  "supplier": "Anbieter",
+  "unknown": "Unbekannt"
 }
