--- a/translations/el.json
+++ b/translations/el.json
@@ -11,13 +11,13 @@
   "BabbageUI.hideList": "Κρύψε τη λίστα",
   "BabbageUI.loadingData": "<strong>Φόρτωση δεδομένων<strong> Παρακαλώ περιμένετε...",
   "BabbageUI.noDataAvailable": "<strong>Δεν υπάρχουν δεδομένα για εμφάνιση.</strong>",
+  "BabbageUI.others": "'Αλλοι",
   "BabbageUI.percentage": "Μοιράσου το",
   "BabbageUI.showList": "Εμφάνισε τη λίστα",
   "BabbageUI.title": "Τίτλος",
   "BabbageUI.tooManyCategories": "<strong>Υπεράριθμες κατηγορίες.</strong> Η ανάλυση που έχετε επιλέξει περιλαμβάνει πολλές διαφορετικές κατηγορίες - μόνο οι {count} μεγαλύτερες εμφανίζονται.",
   "BabbageUI.tooMuchData": "<strong>Ωχχχχ!!</strong>Το ερώτημα επιστρέφει υπερβολικά πολλά δεδομένα και δεν μπορούν να εμφανιστούν στον πίνακα. Δοκιμάστε την Εξόρυξη Δεδομένων αντ' αυτού, ή άλλο ερώτημα.",
   "BabbageUI.total": "Σύνολο",
-  "BabbageUI.others": "'Αλλοι",
   "Bar Chart": "Ραβδόγραμμα",
   "Bubble Tree": "Διάγραμμα Φυσαλλίδας",
   "Budget Line Id": "Αναγνωριστικό γραμμής προϋπολογισμού",
@@ -74,5 +74,22 @@
   "Value Formatting Scale": "\"Δισεκατομμύρια\": 1000000000, \"Εκατομμύρια\": 1000000, \"Χιλιάδες\": 1000",
   "View Raw Source Data": "Δες τα πρωτογενή δεδομένα",
   "X-Axis": "Άξονας Χ",
-  "existing visualizations to enable full range of visualization types.": "υπάρχουσες οπτικοποιήσεις για ενεργοποίηση όλου του εύρους των πιθανών οπτικοποιήσεων."
+  "activity": "Δραστηριότητα",
+  "administrative-classification": "Διοικητική Ταξινόμηση",
+  "administrator": "Διαχειριστής",
+  "budget-line-id": "Αναγνωριστικό γραμμής προϋπολογισμού",
+  "budgetary-transfers": "Συναλλαγές προϋπολογισμού",
+  "date": "Ημερομηνία",
+  "direction": "Κατεύθυνση",
+  "economic-classification": "Οικονομική ταξινόμηση",
+  "existing visualizations to enable full range of visualization types.": "υπάρχουσες οπτικοποιήσεις για ενεργοποίηση όλου του εύρους των πιθανών οπτικοποιήσεων.",
+  "expenditure-type": "Τύπος εξόδου",
+  "fin-source": "Οικονομική πηγή",
+  "functional-classification": "Λειτουργική ταξινόμηση",
+  "geo-source": "Γεωγραφική πηγή",
+  "phase": "Φάση",
+  "procurer": "Προμηθευτής",
+  "recipient": "Παραλήπτης",
+  "supplier": "Πάροχος",
+  "unknown": "Άγνωστο"
 }
