--- a/translations/en.json
+++ b/translations/en.json
@@ -11,13 +11,13 @@
   "BabbageUI.hideList": "Hide list",
   "BabbageUI.loadingData": "<strong>Loading data.</strong> Please wait...",
   "BabbageUI.noDataAvailable": "<strong>No data to display.</strong>",
+  "BabbageUI.others": "Others",
   "BabbageUI.percentage": "Share",
   "BabbageUI.showList": "Show list",
   "BabbageUI.title": "Title",
   "BabbageUI.tooManyCategories": "<strong>Too many categories.</strong> The breakdown you have selected contains many different categories, only the {count} biggest are shown.",
   "BabbageUI.tooMuchData": "<strong>Oh snap!</strong> The query returns too much data and can't be displayed in the table. Try the DataMine instead or another query.",
   "BabbageUI.total": "Total",
-  "BabbageUI.others": "Others",
   "Bar Chart": "Bar Chart",
   "Bubble Tree": "Bubble Tree",
   "Budget Line Id": "Budget Line Id",
@@ -75,5 +75,22 @@
   "Value Formatting Scale": "\"Billion\": 1000000000, \"Million\": 1000000, \"Thousand\": 1000",
   "View Raw Source Data": "View Raw Source Data",
   "X-Axis": "X-Axis",
-  "existing visualizations to enable full range of visualization types.": "existing visualizations to enable full range of visualization types."
+  "activity": "Activity",
+  "administrative-classification": "Administrative Classification",
+  "administrator": "Administrator",
+  "budget-line-id": "Budget Line Id",
+  "budgetary-transfers": "Budgetary Transfers",
+  "date": "Date",
+  "direction": "Direction",
+  "economic-classification": "Economic Classification",
+  "existing visualizations to enable full range of visualization types.": "existing visualizations to enable full range of visualization types.",
+  "expenditure-type": "Expenditure Type",
+  "fin-source": "Fin Source",
+  "functional-classification": "Functional Classification",
+  "geo-source": "Geo Source",
+  "phase": "Phase",
+  "procurer": "Procurer",
+  "recipient": "Recipient",
+  "supplier": "Supplier",
+  "unknown": "Unknown"
 }
