--- a/translations/es.json
+++ b/translations/es.json
@@ -1,63 +1,63 @@
 {
-  "... there are more items": "... hay m\u00e1s elementos",
+  "... there are more items": "... hay más elementos",
   "Activity": "Actividad",
-  "Add Visualization": "Agregar visualizaci\u00f3n",
-  "Administrative Classification": "Clasificaci\u00f3n Administrativa",
+  "Add Visualization": "Agregar visualización",
+  "Administrative Classification": "Clasificación Administrativa",
   "Administrator": "Administrador",
   "Analyse this data set in the Data Mine": "Analiza los datos completos en Data Mine",
   "Available visualizations": "Visualizaciones disponibles",
   "BabbageUI.amount": "Monto",
-  "BabbageUI.chooseRowsAndColumns": "<strong>No has seleccionado ning\u00fan dato.</strong> Por favor selecciona un conjunto de filas y columnas para generar una tabla cruzada.",
+  "BabbageUI.chooseRowsAndColumns": "<strong>No has seleccionado ningún dato.</strong> Por favor selecciona un conjunto de filas y columnas para generar una tabla cruzada.",
   "BabbageUI.hideList": "Ocultar lista",
   "BabbageUI.loadingData": "<strong>Cargando los datos.</strong> Por favor espere...",
   "BabbageUI.noDataAvailable": "<strong>No hay datos para mostrar.</strong>",
-  "BabbageUI.percentage": "Proporci\u00f3n",
+  "BabbageUI.others": "Otros",
+  "BabbageUI.percentage": "Proporción",
   "BabbageUI.showList": "Mostrar lista",
-  "BabbageUI.title": "T\u00edtulo",
-  "BabbageUI.tooManyCategories": "<strong>Demasiadas categor\u00edas.</strong> El desglose elegido contiene demasiadas categorias, \u00fanicamente se muestran las {count} m\u00e1s grandes. ",
+  "BabbageUI.title": "Título",
+  "BabbageUI.tooManyCategories": "<strong>Demasiadas categorías.</strong> El desglose elegido contiene demasiadas categorias, únicamente se muestran las {count} más grandes. ",
   "BabbageUI.tooMuchData": "<strong>Oh cielos!</strong> La consulta devuelve demasiados datos y no pueden mostrarse en una tabla. Prueba el DataMine u otra consulta.",
   "BabbageUI.total": "Total",
-  "BabbageUI.others": "Otros",
-  "Bar Chart": "Gr\u00e1fica de Barras",
-  "Bubble Tree": "Gr\u00e1fica de Burbujas",
+  "Bar Chart": "Gráfica de Barras",
+  "Bubble Tree": "Gráfica de Burbujas",
   "Budget Line Id": "Clave de Cartera",
   "Budgetary Transfers": "Transferencias Presupuestarias",
   "CSV export encoding": "Windows-1252",
   "Clear": "Limpiar",
   "Columns": "Columnas",
   "Copy to clipboard": "Copiar al portapapeles",
-  "Create visualisation and select a view of your choice": "Crea una visualizaci\u00f3n y elige una vista de tu preferencia",
+  "Create visualisation and select a view of your choice": "Crea una visualización y elige una vista de tu preferencia",
   "Data Resources": "Recursos de Datos",
   "Date": "Fecha",
-  "Direction": "Direcci\u00f3n",
+  "Direction": "Dirección",
   "Download Data Package": "Descarga Paquete de Datos",
   "Download as CSV": "Descarga como .CSV",
-  "Economic Classification": "Clasificaci\u00f3n Econ\u00f3mica",
+  "Economic Classification": "Clasificación Económica",
   "Embed": "Embebido",
   "Expenditure Type": "Tipo de Gasto",
   "Filtered by": "Filtrado por",
   "Filters": "Filtros",
   "Fin Source": "Fuente de Financiamiento",
-  "Functional Classification": "Clasificaci\u00f3n Funcional",
-  "Geo Source": "Entidad Geogr\u00e1fica",
-  "Hierarchies": "Jerarqu\u00edas",
+  "Functional Classification": "Clasificación Funcional",
+  "Geo Source": "Entidad Geográfica",
+  "Hierarchies": "Jerarquías",
   "Invoice Id": "Identificador de factura",
-  "Line Chart": "Gr\u00e1fica de L\u00edneas",
-  "Link": "V\u00ednculo",
+  "Line Chart": "Gráfica de Líneas",
+  "Link": "Vínculo",
   "Loading": "Cargando...",
-  "Location": "Ubicaci\u00f3n",
-  "Log-in to analyse this data set in the Data Mine": "Inicia sesi\u00f3n para analizar los datos completos en Data Mine",
+  "Location": "Ubicación",
+  "Log-in to analyse this data set in the Data Mine": "Inicia sesión para analizar los datos completos en Data Mine",
   "Map": "Mapa",
   "Measures": "Medidas",
   "Open Spending Viewer": "Visualizador de Open Spending (Gasto Abierto)",
   "Phase": "Fase",
-  "Pie Chart": "Gr\u00e1fica de Torta",
-  "Pivot Table": "Tabla Din\u00e1mica",
+  "Pie Chart": "Gráfica de Torta",
+  "Pivot Table": "Tabla Dinámica",
   "Procurer": "Contratante",
-  "Radar Chart": "Gr\u00e1fica de radar",
+  "Radar Chart": "Gráfica de radar",
   "Recipient": "Contratista",
   "Remove all visualizations": "Elimina todas las visualizaciones",
-  "Remove this visualization": "Elimina esta visualizaci\u00f3n",
+  "Remove this visualization": "Elimina esta visualización",
   "Rows": "Filas",
   "Sankey": "Sankey",
   "Search for data package": "Buscar paquete de datos",
@@ -65,14 +65,31 @@
   "Search your packages": "Busca tus paquetes",
   "Series": "Series",
   "Share": "Compartir",
-  "Share this visualization": "Comparte esta visualizaci\u00f3n",
-  "Share visualization": "Comparte esta visualizaci\u00f3n",
+  "Share this visualization": "Comparte esta visualización",
+  "Share visualization": "Comparte esta visualización",
   "Supplier": "Proveedor",
   "Table": "Tabla",
-  "Tree Map": "Gr\u00e1fico de Rect\u00e1ngulos",
+  "Tree Map": "Gráfico de Rectángulos",
   "Unknown": "Desconocido",
   "Value Formatting Scale": "\"Billones\": 1000000000000, \"Millones\": 1000000, \"Miles\": 1000",
   "View Raw Source Data": "Descarga .CSV con los datos completos",
   "X-Axis": "Eje-X",
-  "existing visualizations to enable full range of visualization types.": "visualizaciones existentes para habilitar todos los tipos de visualizaciones"
+  "activity": "Actividad",
+  "administrative-classification": "Clasificación Administrativa",
+  "administrator": "Administrador",
+  "budget-line-id": "Clave de Cartera",
+  "budgetary-transfers": "Transferencias Presupuestarias",
+  "date": "Fecha",
+  "direction": "Dirección",
+  "economic-classification": "Clasificación Económica",
+  "existing visualizations to enable full range of visualization types.": "visualizaciones existentes para habilitar todos los tipos de visualizaciones",
+  "expenditure-type": "Tipo de Gasto",
+  "fin-source": "Fuente de Financiamiento",
+  "functional-classification": "Clasificación Funcional",
+  "geo-source": "Entidad Geográfica",
+  "phase": "Fase",
+  "procurer": "Contratante",
+  "recipient": "Contratista",
+  "supplier": "Proveedor",
+  "unknown": "Desconocido"
 }
