--- a/translations/uk.json
+++ b/translations/uk.json
@@ -57,5 +57,22 @@
   "Value Formatting Scale": "\"мільярдів\": 1000000000, \"мільйонів\": 1000000, \"тисяч\": 1000",
   "View Raw Source Data": "Показати вихідні дані",
   "X-Axis": "Вісь X",
-  "existing visualizations to enable full range of visualization types.": "існуючі візуалізації, що включають повний спектр типів візуалізації."
+  "activity": "Діяльність",
+  "administrative-classification": "Відомча класифікація",
+  "administrator": "Розпорядник коштів",
+  "budget-line-id": "Ідентифікатор бюджетного рядка",
+  "budgetary-transfers": "Бюджетні трасфери",
+  "date": "Дата",
+  "direction": "Напрям",
+  "economic-classification": "Економічна класифікація",
+  "existing visualizations to enable full range of visualization types.": "існуючі візуалізації, що включають повний спектр типів візуалізації.",
+  "expenditure-type": "Тип витрат",
+  "fin-source": "Джерело фінансування",
+  "functional-classification": "Функціональна класифікація",
+  "geo-source": "Географічне джерело",
+  "phase": "Фаза",
+  "procurer": "Замовник",
+  "recipient": "Отримувач бюджетних коштів",
+  "supplier": "Постачальник",
+  "unknown": "Невідомо"
 }
