Update translations to new hierarchy names

--- a/translations/de.json
+++ b/translations/de.json
@@ -56,18 +56,18 @@
   "View Raw Source Data": "Zeige Rohdaten",
   "X-Axis": "X-Achse",
   "activity": "Tätigkeit",
-  "administrative-classification": "Administrative Klassifizierung",
+  "administrative_classification": "Administrative Klassifizierung",
   "administrator": "Administrator",
-  "budget-line-id": "Budget Zeilennummer",
-  "budgetary-transfers": "Haushaltsüberweisungen",
+  "budget_line_id": "Budget Zeilennummer",
+  "budgetary_transfers": "Haushaltsüberweisungen",
   "date": "Datum",
   "direction": "Richtung",
-  "economic-classification": "Wirtschaftliche Klassifizierung",
+  "economic_classification": "Wirtschaftliche Klassifizierung",
   "existing visualizations to enable full range of visualization types.": "existierende Diagramme, um wieder alle Diagramm Typen zur Verfügung zu haben.",
-  "expenditure-type": "Ausgabentyp",
-  "fin-source": "Fin Source",
-  "functional-classification": "Funktionelle Klassifizierung",
-  "geo-source": "Geo Quelle",
+  "expenditure_type": "Ausgabentyp",
+  "fin_source": "Fin Source",
+  "functional_classification": "Funktionelle Klassifizierung",
+  "geo_source": "Geo Quelle",
   "phase": "Phase",
   "procurer": "Vermittler",
   "recipient": "Empfänger",
