--- a/translations/el.json
+++ b/translations/el.json
@@ -75,18 +75,18 @@
   "View Raw Source Data": "Δες τα πρωτογενή δεδομένα",
   "X-Axis": "Άξονας Χ",
   "activity": "Δραστηριότητα",
-  "administrative-classification": "Διοικητική Ταξινόμηση",
+  "administrative_classification": "Διοικητική Ταξινόμηση",
   "administrator": "Διαχειριστής",
-  "budget-line-id": "Αναγνωριστικό γραμμής προϋπολογισμού",
-  "budgetary-transfers": "Συναλλαγές προϋπολογισμού",
+  "budget_line_id": "Αναγνωριστικό γραμμής προϋπολογισμού",
+  "budgetary_transfers": "Συναλλαγές προϋπολογισμού",
   "date": "Ημερομηνία",
   "direction": "Κατεύθυνση",
-  "economic-classification": "Οικονομική ταξινόμηση",
+  "economic_classification": "Οικονομική ταξινόμηση",
   "existing visualizations to enable full range of visualization types.": "υπάρχουσες οπτικοποιήσεις για ενεργοποίηση όλου του εύρους των πιθανών οπτικοποιήσεων.",
-  "expenditure-type": "Τύπος εξόδου",
-  "fin-source": "Οικονομική πηγή",
-  "functional-classification": "Λειτουργική ταξινόμηση",
-  "geo-source": "Γεωγραφική πηγή",
+  "expenditure_type": "Τύπος εξόδου",
+  "fin_source": "Οικονομική πηγή",
+  "functional_classification": "Λειτουργική ταξινόμηση",
+  "geo_source": "Γεωγραφική πηγή",
   "phase": "Φάση",
   "procurer": "Προμηθευτής",
   "recipient": "Παραλήπτης",
