--- a/translations/en.json
+++ b/translations/en.json
@@ -76,18 +76,18 @@
   "View Raw Source Data": "View Raw Source Data",
   "X-Axis": "X-Axis",
   "activity": "Activity",
-  "administrative-classification": "Administrative Classification",
+  "administrative_classification": "Administrative Classification",
   "administrator": "Administrator",
-  "budget-line-id": "Budget Line Id",
-  "budgetary-transfers": "Budgetary Transfers",
+  "budget_line_id": "Budget Line Id",
+  "budgetary_transfers": "Budgetary Transfers",
   "date": "Date",
   "direction": "Direction",
-  "economic-classification": "Economic Classification",
+  "economic_classification": "Economic Classification",
   "existing visualizations to enable full range of visualization types.": "existing visualizations to enable full range of visualization types.",
-  "expenditure-type": "Expenditure Type",
-  "fin-source": "Fin Source",
-  "functional-classification": "Functional Classification",
-  "geo-source": "Geo Source",
+  "expenditure_type": "Expenditure Type",
+  "fin_source": "Fin Source",
+  "functional_classification": "Functional Classification",
+  "geo_source": "Geo Source",
   "phase": "Phase",
   "procurer": "Procurer",
   "recipient": "Recipient",
