--- a/translations/es.json
+++ b/translations/es.json
@@ -75,18 +75,18 @@
   "View Raw Source Data": "Descarga .CSV con los datos completos",
   "X-Axis": "Eje-X",
   "activity": "Actividad",
-  "administrative-classification": "Clasificación Administrativa",
+  "administrative_classification": "Clasificación Administrativa",
   "administrator": "Administrador",
-  "budget-line-id": "Clave de Cartera",
-  "budgetary-transfers": "Transferencias Presupuestarias",
+  "budget_line_id": "Clave de Cartera",
+  "budgetary_transfers": "Transferencias Presupuestarias",
   "date": "Fecha",
   "direction": "Dirección",
-  "economic-classification": "Clasificación Económica",
+  "economic_classification": "Clasificación Económica",
   "existing visualizations to enable full range of visualization types.": "visualizaciones existentes para habilitar todos los tipos de visualizaciones",
-  "expenditure-type": "Tipo de Gasto",
-  "fin-source": "Fuente de Financiamiento",
-  "functional-classification": "Clasificación Funcional",
-  "geo-source": "Entidad Geográfica",
+  "expenditure_type": "Tipo de Gasto",
+  "fin_source": "Fuente de Financiamiento",
+  "functional_classification": "Clasificación Funcional",
+  "geo_source": "Entidad Geográfica",
   "phase": "Fase",
   "procurer": "Contratante",
   "recipient": "Contratista",
