--- a/translations/uk.json
+++ b/translations/uk.json
@@ -58,18 +58,18 @@
   "View Raw Source Data": "Показати вихідні дані",
   "X-Axis": "Вісь X",
   "activity": "Діяльність",
-  "administrative-classification": "Відомча класифікація",
+  "administrative_classification": "Відомча класифікація",
   "administrator": "Розпорядник коштів",
-  "budget-line-id": "Ідентифікатор бюджетного рядка",
-  "budgetary-transfers": "Бюджетні трасфери",
+  "budget_line_id": "Ідентифікатор бюджетного рядка",
+  "budgetary_transfers": "Бюджетні трасфери",
   "date": "Дата",
   "direction": "Напрям",
-  "economic-classification": "Економічна класифікація",
+  "economic_classification": "Економічна класифікація",
   "existing visualizations to enable full range of visualization types.": "існуючі візуалізації, що включають повний спектр типів візуалізації.",
-  "expenditure-type": "Тип витрат",
-  "fin-source": "Джерело фінансування",
-  "functional-classification": "Функціональна класифікація",
-  "geo-source": "Географічне джерело",
+  "expenditure_type": "Тип витрат",
+  "fin_source": "Джерело фінансування",
+  "functional_classification": "Функціональна класифікація",
+  "geo_source": "Географічне джерело",
   "phase": "Фаза",
   "procurer": "Замовник",
   "recipient": "Отримувач бюджетних коштів",
