Fix Croatia translations json

--- a/translations/hr.json
+++ b/translations/hr.json
@@ -97,5 +97,5 @@
   "Reset View": "Poništi prikaz",
   "Reset to Defaults": "Vrati na početnu vrijednost",
   "This will save the current view as the<br>default for all users of this dataset.<br>Are you sure?": "Ovime će sadašnji prikaz biti spremljen kao<br>početni za sve korisnike ovog skupa podataka.<br>Jeste li sigurni?",
-  "Yes": "Da",
+  "Yes": "Da"
 }
