Updated German translation

--- a/translations/de.json
+++ b/translations/de.json
@@ -1,11 +1,11 @@
 {
   "... there are more items": "... weitere Daten vorhanden",
   "Activity": "Tätigkeit",
-  "Add Visualization": "Diagramm hinzufügen",
+  "Add Visualization": "Visalisierung hinzufügen",
   "Administrative Classification": "Administrative Klassifizierung",
   "Administrator": "Administrator",
   "Analyse this data set in the Data Mine": "Analysiere diese Daten in der Data Mine",
-  "Available visualizations": "Verfügbare Diagramme",
+  "Available visualizations": "Verfügbare Visalisierungen",
   "Bar Chart": "Säulendiagramm",
   "Bubble Tree": "Bubble Tree",
   "Budget Line Id": "Budget Zeilennummer",
@@ -13,16 +13,18 @@
   "CSV export encoding": "CSV export encoding",
   "Clear": "Löschen",
   "Columns": "Spalten",
-  "Create visualisation and select a view of your choice": "Erstelle ein Diagramm und selektiere eine Ansicht",
+  "Copy to clipboard": "In die Zwischenablage kopieren",
+  "Create visualisation and select a view of your choice": "Erstelle eine Visalisierung und wähle eine Diagramm",
   "Data Resources": "Datenquellen",
   "Date": "Datum",
   "Direction": "Richtung",
+  "Donut Chart": "Kreisdiagramm",
   "Download Data Package": "Download Datenpaket",
   "Download as CSV": "Download als CSV",
   "Economic Classification": "Wirtschaftliche Klassifizierung",
   "Embed": "Einbetten",
   "Expenditure Type": "Ausgabentyp",
-  "Filtered by": "Gefiltert von",
+  "Filtered by": "Gefiltert nach",
   "Filters": "Filter",
   "Fin Source": "Fin Source",
   "Functional Classification": "Funktionelle Klassifizierung",
@@ -31,28 +33,34 @@
   "Invoice Id": "Rechnungsnummer",
   "Line Chart": "Liniendiagramm",
   "Link": "Link",
+  "Loading": "Lädt...",
   "Location": "Ort",
   "Log-in to analyse this data set in the Data Mine": "Einloggen, um diese Daten in der Data Mine zu analysieren",
   "Map": "Karte",
   "Measures": "Maßnahmen",
-  "Open Spending Viewer": "öffne Spending Viewer",
+  "Open Spending Viewer": "Open Spending Viewer",
   "Phase": "Phase",
   "Pie Chart": "Tortendiagramm",
   "Pivot Table": "Pivot Tabelle",
   "Procurer": "Vermittler",
+  "Radar Chart": "Radardiagramm",
   "Recipient": "Empfänger",
   "Remove all visualizations": "Entferne alle Diagramme",
   "Remove this visualization": "Diese Visualisierung entfernen",
   "Rows": "Zeilen",
-  "Search for data package": "Suche nach Daten Paket",
+  "Sankey": "Sankey",
+  "Search for data package": "Suche nach Datenpaket",
   "Search for item...": "Suche nach Eintrag...",
+  "Search your packages": "Eigene Datenpakete durchsuchen",
   "Series": "Serien",
-  "Share": "Share",
-  "Share visualization": "Diagramm teilen",
+  "Share": "Teilen",
+  "Share this visualization": "Diese Visualisierung teilen",
+  "Share visualization": "Visualisierung teilen",
   "Supplier": "Anbieter",
   "Table": "Tabelle",
   "Tree Map": "Tree Map",
   "Unknown": "Unbekannt",
+  "Value Formatting Scale": "\"Milliarden\": 1000000000, \"Millionen\": 1000000, \"Tausend\": 1000",
   "View Raw Source Data": "Zeige Rohdaten",
   "X-Axis": "X-Achse",
   "activity": "Tätigkeit",
@@ -63,7 +71,7 @@
   "date": "Datum",
   "direction": "Richtung",
   "economic_classification": "Wirtschaftliche Klassifizierung",
-  "existing visualizations to enable full range of visualization types.": "existierende Diagramme, um wieder alle Diagramm Typen zur Verfügung zu haben.",
+  "existing visualizations to enable full range of visualization types.": "existierender Diagramme, um wieder alle Diagrammtypen verfügbar zu haben.",
   "expenditure_type": "Ausgabentyp",
   "fin_source": "Fin Source",
   "functional_classification": "Funktionelle Klassifizierung",
@@ -72,5 +80,10 @@
   "procurer": "Vermittler",
   "recipient": "Empfänger",
   "supplier": "Anbieter",
-  "unknown": "Unbekannt"
+  "unknown": "Unbekannt",
+  "Save View as Default": "Diese Ansicht als Standard speichern",
+  "Reset View": "Ansicht zurücksetzen",
+  "Reset to Defaults": "Einstellungen zurücksetzen",
+  "This will save the current view as the<br>default for all users of this dataset.<br>Are you sure?": "Dies speichert die Standardansicht für<br>alle Nutzer dieses Datensatzes.<br>Bist du sicher?",
+  "Yes": "Ja"
 }
