Update Croatian translation

--- a/translations/hr.json
+++ b/translations/hr.json
@@ -72,11 +72,11 @@
   "Table": "Tablica",
   "Tree Map": "Dijagram stabla",
   "Unknown": "Nepoznato",
-  "Value Formatting Scale": "\"Milijarda\": 1000000000, \"Milijun\": 1000000, \"Tisuću\": 1000",
+  "Value Formatting Scale": "\"mlrd\": 1000000000, \"Milijun\": 1000000, \"Tisuću\": 1000",
   "View Raw Source Data": "Pogledaj izvorne podatke",
   "X-Axis": "X-Os",
   "activity": "Glavni program",
-  "administrative_classification": "prva razina organizacijske klasifikacije (razdjel) ",
+  "administrative_classification": "Organizacijska klasifikacija",
   "administrator": "proračunski korisnik",
   "budget_line_id": "Proračunska adresa /Proračunska stavka",
   "budgetary_transfers": "Proračunski prijenos Prijenos proračunskih sredstava",
@@ -85,7 +85,7 @@
   "economic_classification": "Ekonomska klasifikacija",
   "existing visualizations to enable full range of visualization types.": "Izbriši postojeće vizualizacije kako bi se omogućile sve vrste vizualizacija.",
   "expenditure_type": "Vrsta rashoda",
-  "fin_source": "Izvor financiranja",
+  "fin_source": "Izvori financiranja",
   "functional_classification": "Funkcijska klasifikacija",
   "geo_source": "Lokacijska klasifikacija",
   "phase": "Faza",
