Updated German translation

--- a/translations/de.json
+++ b/translations/de.json
@@ -6,6 +6,18 @@
   "Administrator": "Administrator",
   "Analyse this data set in the Data Mine": "Analysiere diese Daten in der Data Mine",
   "Available visualizations": "Verfügbare Visalisierungen",
+  "BabbageUI.amount": "Betrag",
+  "BabbageUI.chooseRowsAndColumns": "<strong>Du hast keine Daten ausgewählt.</strong> Bitte wähle eine Auswahl an Zeilen und Spalten für die Erzeugung der Kreuztabelle.",
+  "BabbageUI.hideList": "Liste ausblenden",
+  "BabbageUI.loadingData": "<strong>Lade Daten.</strong> Bitte warten...",
+  "BabbageUI.noDataAvailable": "<strong>Keine Daten zum Anzeigen vorhanden.</strong>",
+  "BabbageUI.others": "Andere",
+  "BabbageUI.percentage": "Anteil",
+  "BabbageUI.showList": "Liste anzeigen",
+  "BabbageUI.title": "Titel",
+  "BabbageUI.tooManyCategories": "<strong>Zu viele Kategorien.</strong> Die Aufschlüsselung, die du gewählt hast, enthält viele verschiedene Kategorien. Nur die größten {count} werden angezeigt.",
+  "BabbageUI.tooMuchData": "<strong>Auweia!</strong> Das Ergebnis der Anfrage enthält zu viele Daten und kann in der Tabelle nicht dargestellt werden. Versuche es stattdessen in der DataMine oder mit einer anderen Anfrage.",
+  "BabbageUI.total": "Summe",
   "Bar Chart": "Säulendiagramm",
   "Bubble Tree": "Bubble Tree",
   "Budget Line Id": "Budget Zeilennummer",
